--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       <input type="text" id="pdfInput" placeholder="Nombre del archivo PDF" value="Programación Cruceros 2025 V5.9.pdf">
     </div>
     <div class="pdf-container">
-      <embed id="pdfViewer" type="application/pdf" width="100%" height="100%">
+      <embed id="pdfViewer" src="Programación Cruceros 2025 V5.9.pdf" type="application/pdf" width="100%" height="100%">
     </div>
   </div>
   <script src="main.js"></script>
