--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="robots" content="noindex, nofollow">
-  <title>Cruceros</title>
+  <title>Programación de Cruceros</title>
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
