--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <div class="container">
     <div class="pdf-container">
-      <embed id="pdfViewer" src="Programación Cruceros 2025 V5.9.pdf" type="application/pdf" width="100%" height="100%">
+      <embed id="pdfViewer" src="cruceros.pdf" type="application/pdf" width="100%" height="100%">
     </div>
   </div>
   <script src="main.js"></script>
