--- a/index.html
+++ b/index.html
@@ -9,8 +9,7 @@
 <body>
   <div class="container">
     <div class="pdf-container">
-      <embed id="pdfViewer" src="cruceros.pdf" type="application/pdf" width="100%" height="100%">
-    </div>
+    <iframe id="pdfViewer" src="cruceros.pdf" width="100%" height="600px"></iframe>
   </div>
   <script src="main.js"></script>
 </body>
